Fixed expand collapse

--- a/styles/chat-cards.css
+++ b/styles/chat-cards.css
@@ -6,7 +6,7 @@
 .blacksmith-card {
     padding: 0;
     margin: 0;
-    font-family: var(--font-primary);
+    font-family: var(--dnd5e-font-roboto); 
     background-color: #ffffff;
     border: 1px solid #594a3c;
     border-radius: 5px;
@@ -31,6 +31,7 @@
 
 /* Section Headers */
 .section-header {
+    font-family: var(--dnd5e-font-roboto-slab); 
     font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 10px;
@@ -39,6 +40,8 @@
 
 /* Section Content */
 .section-content {
+    font-family: var(--dnd5e-font-roboto); 
+    font-size: 1.0em;
     max-height: 1000px;
     transition: max-height 0.3s ease-out;
     overflow: hidden;
@@ -208,26 +211,61 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    gap: 2px;
+    gap: 3px;
 }
 
 .turn-name {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-weight: normal;
     font-size: 0.9em;
-    margin-bottom: 0.2em;
-    gap: 2px;
+    margin-bottom: 2px;
+}
+
+
+.turn-name strong {
+    font-weight: 900;
+	text-transform: uppercase;
+	text-overflow: ellipsis;
+}
+
+.status-tag.rank {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    background-color: #629602;
+    color: white;
+    padding: 2px 6px;
+    border-radius: 3px;
+    font-weight: bold;
+    z-index: 1;
+}
+
+.turn-time {
+    margin-left: auto;
+    color: #594a3c;
+	white-space: nowrap;
+}
+
+.turn-time.expired {
+    color: #8b0000;
+    font-weight: bold;
+}
+
+.turn-time.skipped {
+    color: #666666;
+    font-style: italic;
 }
 
 .turn-name .fa-fire {
-    color: #3498db;
-    margin-left: 4px;
+    color: #e23b3e;
+    margin-left: 1px;
 }
 
 .turn-name .fa-skull {
-    color: #ff0000;
-    margin-left: 4px;
+    color: #3498db;
+    margin-left: 1px;
 }
 
 .turn-stats {
@@ -236,6 +274,7 @@
     white-space: nowrap;
     font-size: 0.9em;
     color: #594a3c;
+	margin-top: 1px;
 }
 
 .turn-stats .stat-value {
@@ -252,7 +291,8 @@
     height: 4px;
     background: #d5ccc7;
     border-radius: 2px;
-    margin-top: 4px;
+    margin-top: 0px;
+	margin-bottom: 0px;
     overflow: hidden;
 }
 
@@ -378,4 +418,17 @@
 
 .blacksmith-card i {
     margin-right: 5px;
+}
+
+
+
+/* THEME DEFAULT */
+
+
+.blacksmith-card.theme-default {
+    background: rgba(0, 0, 0, 0.05);
+    border: 0px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 0.5em;
+    margin-bottom: 15px;
 } 
